2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.

2008-11-18  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Lexer/CSharp/ConditionalCompilation.cs: made conditional
	compilation class public.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/CSharp/cs.ATG:
	* Project/Src/Parser/CSharp/Parser.cs:
	* Project/Src/Parser/CSharp/CSharpParser.cs: Changed the grammar
	slightly.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/IParser.cs:
	* Project/Src/Parser/AbstractParser.cs:
	* Project/Src/Parser/VBNet/VBNetParser.cs:
	* Project/Src/Parser/CSharp/CSharpParser.cs: Added pase type reference.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/CSharp/CSharpParser.cs: fixed bug in nrefactory.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/CSharp/CSharpParser.cs: fixed 'Bug 434705 - No
	autocomplete offered if not assigning result of 'new' to a variable'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/CSharpParser.cs: fixed 'Bug 431183 -
	  Invalid UnaryExpr'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG,
	  Project/Src/Parser/CSharp/Parser.cs: fixed Bug 384199 - c# code
	  parsing breaks on unsafe pointers

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs,
	  Project/Src/Lexer/Special/PreProcessingDirective.cs,
	  Project/Src/Lexer/AbstractLexer.cs,
	  Project/Src/PrettyPrinter/CSharp/CSharpOutputVisitor.cs,
	  Project/Src/PrettyPrinter/CSharp/OutputFormatter.cs,
	  Project/Src/PrettyPrinter/IOutputAstVisitor.cs,
	  Project/Src/PrettyPrinter/AbstractOutputFormatter.cs,
	  Project/Src/PrettyPrinter/VBNet/VBNetOutputVisitor.cs: Added some
	  stuff for pre processor directive handling.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* NRefactory.mdp: Updated.

2008-09-10  Mike Krüger <mkrueger@novell.com> 
