@@ -1,3 +1,9 @@
+2009-01-09  Mike Krüger  <mkrueger@novell.com>
+
+	* Project/Src/Parser/CSharp/cs.ATG:
+	* Project/Src/Parser/CSharp/Parser.cs: Corrected destructor start
+	location.
+
 2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am: Make it work for parallel build.
